2015-04-27 Michael Medin
 * Improved the logging around connection failures
 * Improved the reporter syntax:
   reporter.exe send b1438ab2-20a3-4b2d-bc30-7c3033c084e1.dmp

2015-04-08 Michael Medin
 * #139 Added support for showing file dates in local time (not just UTC)
 * Added check_ping command and CheckNet module
 * Fixed a few potential crashes with check_nt

2015-03-24 Michael Medin
 * #123 fixed CheckAllOthers
 * #124 Fixed problem count variable
 * #131 Added support for service=<service description> to check_service
 * A lot of infrastructure changes and build fixes

2015-02-23 Michael Medin
 * Fixed check_files empty  message to say files not drives.
 * #114 Fixed issue with empty-state which was ignored
 * A lot of infrastructure changes and build fixes

2015-02-14 Michael Medin
 * Fix incorrect variable in check_page_filter()
 * Add pct to check_pagefile
   This is basically a clone of f90ab0bf which added pct to check_memory.

2015-02-14 Michael Medin
 * #110 Added support for using units in check_cpu
 * added error handling for invalid states on checkservice
 * Fixed compiler warning
 * #103 Improved error messages and logging related to settings

2015-02-11 Michael Medin
 * #105 Fixed issue with parsing legacy style checkservice comamnds
 * improved error handling is service check parsing failes

2015-02-06 Michael Medin
 * #102 fixed check_os_version default filter

2015-02-04 Michael Medin
 * Tweaked build a bit to resuse some code
 * added postbuild.bat to work around using the wrong python.exe
 * Fixed so specified python is found before path python (i.e 32-bit python on 64 bit machines)
 * #100 Fixed check_pdh not picking up warn short hand options.
 * Added option to rebuild without bumping version
 * Changed symbol paths
 * bumped versions and updated docs
 * Fixed crash upload properties to work with new collector
 * Fixed crash upload configuration
 * Added support for creating github releases
 * Added documentation for chiper strings