@@ -1,3 +1,6 @@
+2015-04-29 Michael Medin
+ * Improved handling around connection failures
+
 2015-04-27 Michael Medin
  * Improved the logging around connection failures
  * Improved the reporter syntax:
